<resources>
    <string name="app_name">Medidores App</string>
    <string name="title_listado">Mediciones Registradas</string>
    <string name="title_registro">Registro de Medición</string>
    <string name="btn_nueva_medicion">Nueva medición</string>
    <string name="btn_registrar">Registrar medición</string>
    <string name="btn_actualizar">Actualizar medición</string>
    <string name="msg_confirmar_eliminar">¿Estás seguro de que deseas eliminar esta medición?</string>
    <string name="opcion_editar">Editar</string>
    <string name="opcion_eliminar">Eliminar</string>
    <string name="opcion_ordenar">Ordenar por</string>
    <string name="orden_recientes">Fecha: Recientes primero</string>
    <string name="orden_antiguos">Fecha: Antiguos primero</string>
    <string name="orden_lectura_mayor">Lectura: Mayor a menor</string>
    <string name="orden_lectura_menor">Lectura: Menor a mayor</string>
    <string name="orden_tipo">Tipo de servicio (Agua, Luz, Gas)</string>
    <string name="label_medidor_de">Medidor de:</string>
    <string name="opcion_agua">Agua</string>
    <string name="opcion_luz">Luz</string>
    <string name="opcion_gas">Gas</string>
    <string name="label_lectura">Lectura</string>
    <string name="label_fecha">Fecha</string>
    <string name="hint_lectura">Valor del medidor</string>
    <string name="error_campo_obligatorio">Este campo es obligatorio</string>
    <string name="txt_lectura_item">Lectura: %s</string>
    <string name="txt_fecha_item">Fecha: %s</string>
</resources>
